--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.46.0"
+    "cozy-konnector-libs": "4.50.1",
+    "pdfjs": "^2.4.7"
   },
   "devDependencies": {
-    "cozy-jobs-cli": "1.16.7",
-    "cozy-konnector-build": "1.2.4"
+    "cozy-jobs-cli": "1.17.2",
+    "cozy-konnector-build": "1.3.0"
   }
 }
