--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
-    "cozy-konnector-libs": "4.51.0"
+    "cozy-konnector-libs": "4.51.0",
+    "date-fns": "^2.28.0"
   },
   "devDependencies": {
     "cozy-jobs-cli": "1.17.4",
